<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2_how">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_hesapla_cikis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nasilcalisir"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aciklamaasil"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_hesapla_wiki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wikiyegit" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>